# readalongweb

./: .gitignore  Dockerfile  docker-compose.yml
mobile/: package-lock.json
rust-core/: .dockerignore  Cargo.toml
rust-core/readalong-core/: Cargo.toml
rust-core/readalong-core/src/: content.rs  epub.rs  lib.rs  smil.rs  sync.rs
rust-core/readalong-mobile/: Cargo.toml
rust-core/readalong-server/: Cargo.toml  readalong_server.db
rust-core/readalong-server/src/: align.rs  db.rs  import.rs  main.rs  transcribe.rs
rust-core/readalong-wasm/: Cargo.toml  package-lock.json
rust-core/readalong-wasm/src/: lib.rs
web-app/: Dockerfile  docker-compose.yml  jest.config.cjs  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web-app/src/: App.tsx  alignment.worker.ts  alignmentProvider.ts  fuzzyAlignment.test.ts  fuzzyAlignment.ts  index.css
web-app/src/components/Player/: Player.tsx
web-app/src/context/: AlignmentContext.tsx
web-app/src/pages/Align/: Align.tsx
web-app/src/pages/Import/: Import.tsx
web-app/src/pages/Reader/: Reader.tsx
web-app/src/storage/: db.ts
