[package]
name = "readalong-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
whisper-rs = "0.11"
readalong-core = { path = "../readalong-core" }
uuid = { version = "1.8", features = ["v4"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
hound = "3.5.1"
zip = "8.6.0"
roxmltree = "0.21.1"
