[package]
name = "readalong-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
readalong-core = { path = "../readalong-core" }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
roxmltree = "0.21.1"
serde = { version = "1.0.229", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3"
